--- a/Connect-X-Agents.ipynb
+++ b/Connect-X-Agents.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 1,
    "id": "3aff7727",
    "metadata": {},
    "outputs": [
@@ -10,6 +10,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[kaggle_environments.envs.open_spiel.open_spiel] INFO: Successfully loaded OpenSpiel environments: 6.\n",
+      "[kaggle_environments.envs.open_spiel.open_spiel] INFO:    open_spiel_chess\n",
+      "[kaggle_environments.envs.open_spiel.open_spiel] INFO:    open_spiel_connect_four\n",
+      "[kaggle_environments.envs.open_spiel.open_spiel] INFO:    open_spiel_gin_rummy\n",
+      "[kaggle_environments.envs.open_spiel.open_spiel] INFO:    open_spiel_go\n",
+      "[kaggle_environments.envs.open_spiel.open_spiel] INFO:    open_spiel_tic_tac_toe\n",
+      "[kaggle_environments.envs.open_spiel.open_spiel] INFO:    open_spiel_universal_poker\n",
+      "[kaggle_environments.envs.open_spiel.open_spiel] INFO: OpenSpiel games skipped: 0.\n",
       "+---+---+---+---+---+---+---+\n",
       "| 0 | 0 | 0 | 0 | 0 | 0 | 0 |\n",
       "+---+---+---+---+---+---+---+\n",
@@ -32,7 +40,8 @@
     "import os\n",
     "import sys\n",
     "import inspect\n",
-    "from pyplAI_algorithms import minmax_agent, mcts_agent\n",
+    "import time\n",
+    "from pyplAI_algorithms import minimax_agent, mcts_agent\n",
     "\n",
     "env = make(\"connectx\", debug=True)\n",
     "print(env.render(mode=\"ansi\"))"
@@ -40,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 2,
    "id": "37873b8a",
    "metadata": {},
    "outputs": [],
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 3,
    "id": "ad0d6e88",
    "metadata": {},
    "outputs": [],
@@ -72,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 2,
    "id": "469387f5",
    "metadata": {},
    "outputs": [],
@@ -84,8 +93,10 @@
     "    observation = trainer.reset()\n",
     "\n",
     "    while not env.done:\n",
+    "        t0 = time.time()\n",
     "        my_action = agent(observation, env.configuration)\n",
-    "        print(f\"Turn {observation.step + 1}: Action {my_action}\")\n",
+    "        t1 = time.time()\n",
+    "        print(f\"Turn {observation.step + 1}: Action {my_action} (in {t1 - t0:.2f} seconds)\")\n",
     "        observation, reward, done, info = trainer.step(my_action)   \n",
     "\n",
     "    print(f\"\\nYou won :)\\n\" if env.state[0].reward > 0 else \"\\nYou lost :(\\n\")\n",
@@ -94,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 5,
    "id": "360fd1c7",
    "metadata": {},
    "outputs": [],
@@ -117,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 6,
    "id": "1bee72e8",
    "metadata": {},
    "outputs": [],
@@ -137,6 +148,171 @@
     "    env.run([agent, agent])\n",
     "\n",
     "    print(\"Success :)\" if env.state[0].status == env.state[1].status == \"DONE\" else \"Failed :(\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3104416d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Turn 1: Action 2 (in 0.48 seconds)\n",
+      "Turn 3: Action 2 (in 0.63 seconds)\n",
+      "Turn 5: Action 1 (in 0.40 seconds)\n",
+      "Turn 7: Action 4 (in 0.47 seconds)\n",
+      "Turn 9: Action 2 (in 0.41 seconds)\n",
+      "Turn 11: Action 2 (in 0.13 seconds)\n",
+      "\n",
+      "You won :)\n",
+      "\n",
+      "+---+---+---+---+---+---+---+\n",
+      "| 0 | 0 | 0 | 0 | 0 | 0 | 0 |\n",
+      "+---+---+---+---+---+---+---+\n",
+      "| 0 | 0 | 0 | 0 | 0 | 0 | 0 |\n",
+      "+---+---+---+---+---+---+---+\n",
+      "| 0 | 0 | 1 | 0 | 0 | 0 | 0 |\n",
+      "+---+---+---+---+---+---+---+\n",
+      "| 0 | 0 | 1 | 0 | 2 | 0 | 0 |\n",
+      "+---+---+---+---+---+---+---+\n",
+      "| 0 | 1 | 1 | 0 | 1 | 0 | 0 |\n",
+      "+---+---+---+---+---+---+---+\n",
+      "| 2 | 2 | 1 | 0 | 2 | 0 | 2 |\n",
+      "+---+---+---+---+---+---+---+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Debugging Minimax\n",
+    "debug_agent(minimax_agent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "463ef6fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My Agent vs Random Agent: 1.0\n",
+      "My Agent vs Negamax Agent: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluating Minimax\n",
+    "evaluate_agent(minimax_agent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "db86486f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Turn 1: Action 3 (in 1.90 seconds)\n",
+      "Turn 3: Action 3 (in 1.90 seconds)\n",
+      "Turn 5: Action 3 (in 1.90 seconds)\n",
+      "Turn 7: Action 3 (in 1.90 seconds)\n",
+      "\n",
+      "You won :)\n",
+      "\n",
+      "+---+---+---+---+---+---+---+\n",
+      "| 0 | 0 | 0 | 0 | 0 | 0 | 0 |\n",
+      "+---+---+---+---+---+---+---+\n",
+      "| 0 | 0 | 0 | 0 | 0 | 0 | 0 |\n",
+      "+---+---+---+---+---+---+---+\n",
+      "| 0 | 0 | 0 | 1 | 0 | 0 | 0 |\n",
+      "+---+---+---+---+---+---+---+\n",
+      "| 0 | 0 | 0 | 1 | 0 | 0 | 0 |\n",
+      "+---+---+---+---+---+---+---+\n",
+      "| 0 | 0 | 2 | 1 | 0 | 0 | 0 |\n",
+      "+---+---+---+---+---+---+---+\n",
+      "| 0 | 0 | 2 | 1 | 2 | 0 | 0 |\n",
+      "+---+---+---+---+---+---+---+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Debugging MCTS\n",
+    "debug_agent(mcts_agent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "fc578bd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My Agent vs Random Agent: 1.0\n",
+      "My Agent vs Negamax Agent: 0.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluating MCTS\n",
+    "evaluate_agent(mcts_agent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f42bb5c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Agent A won 7 times\n",
+      "Agent B won 3 times\n",
+      "Draw 0 times\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Facing MCTS vs Minimax\n",
+    "facing_agents(mcts_agent, minimax_agent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dc12d8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success :)\n",
+      "Success :)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating agents submissions and validating them\n",
+    "# write_agent_to_file(minimax_agent)\n",
+    "validate_submission(minimax_agent)\n",
+    "\n",
+    "# write_agent_to_file(mcts_agent)\n",
+    "validate_submission(mcts_agent)"
    ]
   }
  ],
