Finished algorithm for ppo training and improved rainbow

--- a/Connect-X-Agents.ipynb
+++ b/Connect-X-Agents.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "3aff7727",
    "metadata": {},
    "outputs": [
@@ -10,16 +10,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[kaggle_environments.envs.open_spiel_env.open_spiel_env] INFO: Successfully loaded OpenSpiel environments: 8.\n",
-      "[kaggle_environments.envs.open_spiel_env.open_spiel_env] INFO:    open_spiel_chess\n",
-      "[kaggle_environments.envs.open_spiel_env.open_spiel_env] INFO:    open_spiel_connect_four\n",
-      "[kaggle_environments.envs.open_spiel_env.open_spiel_env] INFO:    open_spiel_gin_rummy\n",
-      "[kaggle_environments.envs.open_spiel_env.open_spiel_env] INFO:    open_spiel_go\n",
-      "[kaggle_environments.envs.open_spiel_env.open_spiel_env] INFO:    open_spiel_tic_tac_toe\n",
-      "[kaggle_environments.envs.open_spiel_env.open_spiel_env] INFO:    open_spiel_universal_poker\n",
-      "[kaggle_environments.envs.open_spiel_env.open_spiel_env] INFO:    open_spiel_repeated_poker\n",
-      "[kaggle_environments.envs.open_spiel_env.open_spiel_env] INFO:    open_spiel_python_repeated_pokerkit\n",
-      "[kaggle_environments.envs.open_spiel_env.open_spiel_env] INFO: OpenSpiel games skipped: 0.\n",
       "+---+---+---+---+---+---+---+\n",
       "| 0 | 0 | 0 | 0 | 0 | 0 | 0 |\n",
       "+---+---+---+---+---+---+---+\n",
@@ -50,7 +40,7 @@
     "\n",
     "from Submissions.mcts_agent import mcts_agent\n",
     "from Submissions.minimax_agent import minimax_agent\n",
-    "from Submissions.rainbow_agent import rainbow_agent\n",
+    "from Submissions.rainbow.rainbow_agent import rainbow_agent\n",
     "\n",
     "env = make(\"connectx\", debug=True)\n",
     "print(env.render(mode=\"ansi\"))"
@@ -124,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "360fd1c7",
    "metadata": {},
    "outputs": [],
@@ -150,75 +140,6 @@
     "    print(f\"Agent B won {b_rewards.count(1)} times\")\n",
     "    print(f\"Draw {a_rewards.count(0)} times\")\n",
     "    return a_rewards, b_rewards"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "1bee72e8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Writing agent to file and validating submission format\n",
-    "def write_agent_to_file(agent):\n",
-    "    file = agent.__name__ + \".py\"\n",
-    "    with open(file, \"a\" if os.path.exists(file) else \"w\") as f:\n",
-    "        f.write(inspect.getsource(agent))\n",
-    "\n",
-    "def validate_submission(agent):\n",
-    "    out = sys.stdout\n",
-    "    agent = utils.read_file(agent.__name__ + \".py\")\n",
-    "    sys.stdout = out\n",
-    "\n",
-    "    env = make(\"connectx\", debug=True)\n",
-    "    env.run([agent, agent])\n",
-    "\n",
-    "    print(\"Success :)\" if env.state[0].status == env.state[1].status == \"DONE\" else \"Failed :(\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "be3e993a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Facing MCTS vs Minimax\n",
-      "Agent A won 9 times\n",
-      "Agent B won 0 times\n",
-      "Draw 1 times\n",
-      "([1, 1, 1, 1, 1, 1, 0, 1, 1, 1], [-1, -1, -1, -1, -1, -1, 0, -1, -1, -1])\n",
-      "\n",
-      "Facing MCTS vs Rainbow\n",
-      "Agent A won 10 times\n",
-      "Agent B won 0 times\n",
-      "Draw 0 times\n",
-      "([1, 1, 1, 1, 1, 1, 1, 1, 1, 1], [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1])\n",
-      "\n",
-      "Facing Minimax vs Rainbow\n",
-      "Agent A won 10 times\n",
-      "Agent B won 0 times\n",
-      "Draw 0 times\n",
-      "([1, 1, 1, 1, 1, 1, 1, 1, 1, 1], [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1])\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Facing different agents\n",
-    "print(\"Facing MCTS vs Minimax\")\n",
-    "res = facing_agents(mcts_agent, minimax_agent)\n",
-    "print(res)\n",
-    "\n",
-    "print(\"\\nFacing MCTS vs Rainbow\")\n",
-    "res = facing_agents(mcts_agent, rainbow_agent)\n",
-    "print(res)\n",
-    "\n",
-    "print(\"\\nFacing Minimax vs Rainbow\")\n",
-    "res = facing_agents(minimax_agent, rainbow_agent)\n",
-    "print(res)"
    ]
   },
   {
@@ -288,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "fc578bd7",
    "metadata": {},
    "outputs": [
@@ -296,13 +217,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Turn 1: Action 3 (in 0.00 seconds)\n",
+      "Turn 3: Action 3 (in 0.00 seconds)\n",
+      "Turn 5: Action 3 (in 0.00 seconds)\n",
+      "Turn 7: Action 2 (in 0.00 seconds)\n",
+      "Turn 9: Action 2 (in 0.00 seconds)\n",
+      "Turn 11: Action 2 (in 0.00 seconds)\n",
+      "Turn 13: Action 2 (in 0.00 seconds)\n",
       "\n",
+      "You won :)\n",
       "\n",
-      "Evaluating agent against random and negamax with {num_episodes} games as P1 and P2...\n",
+      "+---+---+---+---+---+---+---+\n",
+      "| 0 | 0 | 1 | 0 | 0 | 0 | 0 |\n",
+      "+---+---+---+---+---+---+---+\n",
+      "| 0 | 0 | 1 | 0 | 0 | 0 | 0 |\n",
+      "+---+---+---+---+---+---+---+\n",
+      "| 0 | 0 | 1 | 2 | 0 | 0 | 0 |\n",
+      "+---+---+---+---+---+---+---+\n",
+      "| 0 | 0 | 1 | 1 | 0 | 2 | 0 |\n",
+      "+---+---+---+---+---+---+---+\n",
+      "| 0 | 0 | 2 | 1 | 0 | 2 | 0 |\n",
+      "+---+---+---+---+---+---+---+\n",
+      "| 0 | 0 | 2 | 1 | 0 | 2 | 0 |\n",
+      "+---+---+---+---+---+---+---+\n",
+      "\n",
+      "Evaluating agent against random and negamax with 10 games as P1 and P2...\n",
+      "\n",
       "P1 vs Random: 1.0\n",
-      "P1 vs Negamax: 1.0\n",
+      "P1 vs Negamax: 0.4\n",
+      "\n",
       "P2 vs Random: 1.0\n",
-      "P2 vs Negamax: 1.0\n"
+      "P2 vs Negamax: -0.3\n"
      ]
     }
    ],
@@ -314,89 +259,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "f42bb5c8",
+   "execution_count": null,
+   "id": "be3e993a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Facing MCTS vs Minimax\n",
+      "\n",
+      "Facing Minimax vs Rainbow_1\n",
       "Agent A won 10 times\n",
       "Agent B won 0 times\n",
       "Draw 0 times\n",
+      "([1, 1, 1, 1, 1, 1, 1, 1, 1, 1], [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1])\n",
       "\n",
-      "Facing Minimax vs MCTS\n",
-      "Invalid Action: Invalid column: 0\n",
-      "Agent A won 0 times\n",
-      "Agent B won 9 times\n",
-      "Draw 0 times\n",
-      "\n",
-      "Facing Minimax vs Rainbow\n",
-      "Invalid Action: Invalid column: 0\n",
-      "Invalid Action: Invalid column: 0\n",
-      "Invalid Action: Invalid column: 0\n",
-      "Invalid Action: Invalid column: 0\n",
-      "Invalid Action: Invalid column: 0\n",
-      "Invalid Action: Invalid column: 0\n",
-      "Invalid Action: Invalid column: 0\n",
-      "Invalid Action: Invalid column: 0\n",
-      "Invalid Action: Invalid column: 0\n",
-      "Invalid Action: Invalid column: 0\n",
-      "Agent A won 0 times\n",
-      "Agent B won 0 times\n",
-      "Draw 0 times\n",
-      "\n",
-      "Facing MCTS vs Rainbow\n",
+      "Facing Minimax vs Rainbow_2\n",
       "Agent A won 10 times\n",
       "Agent B won 0 times\n",
-      "Draw 0 times\n"
+      "Draw 0 times\n",
+      "([1, 1, 1, 1, 1, 1, 1, 1, 1, 1], [-1, -1, -1, -1, -1, -1, -1, -1, -1, -1])\n"
      ]
     }
    ],
    "source": [
     "# Facing different agents\n",
     "print(\"Facing MCTS vs Minimax\")\n",
-    "facing_agents(mcts_agent, minimax_agent)\n",
-    "\n",
-    "print(\"\\nFacing Minimax vs MCTS\")\n",
-    "facing_agents(minimax_agent, mcts_agent)\n",
-    "\n",
-    "\n",
-    "\n",
-    "print(\"\\nFacing Minimax vs Rainbow\")\n",
-    "facing_agents(minimax_agent, rainbow_agent)\n",
+    "res = facing_agents(mcts_agent, minimax_agent)\n",
+    "print(res)\n",
     "\n",
     "print(\"\\nFacing MCTS vs Rainbow\")\n",
-    "facing_agents(mcts_agent, rainbow_agent)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4dc12d8a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Success :)\n",
-      "Success :)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Creating agents submissions and validating them\n",
-    "# write_agent_to_file(minimax_agent)\n",
-    "validate_submission(minimax_agent)\n",
+    "res = facing_agents(mcts_agent, rainbow_agent)\n",
+    "print(res)\n",
     "\n",
-    "# write_agent_to_file(mcts_agent)\n",
-    "validate_submission(mcts_agent)\n",
-    "\n",
-    "# write_agent_to_file(rainbow_agent)\n",
-    "validate_submission(rainbow_agent)"
+    "print(\"\\nFacing Minimax vs Rainbow\")\n",
+    "res = facing_agents(minimax_agent, rainbow_agent)\n",
+    "print(res)"
    ]
   }
  ],
