Developed the Alphazero algorithm from scratch and configured it to our game

--- a/Connect-X-Agents.ipynb
+++ b/Connect-X-Agents.ipynb
@@ -38,6 +38,7 @@
     "from agents.minimax_agent import minimax_agent\n",
     "from agents.rainbow_agent import rainbow_agent\n",
     "from agents.ppo_agent import ppo_agent\n",
+    "from agents.alphazero_agent import alphazero_agent\n",
     "\n",
     "env = make(\"connectx\", debug=True)\n",
     "print(env.render(mode=\"ansi\"))"
