--- a/Connect-X-Agents.ipynb
+++ b/Connect-X-Agents.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3aff7727",
    "metadata": {},
    "outputs": [
@@ -10,6 +10,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[kaggle_environments.envs.open_spiel_env.open_spiel_env] INFO: Successfully loaded OpenSpiel environments: 8.\n",
+      "[kaggle_environments.envs.open_spiel_env.open_spiel_env] INFO:    open_spiel_chess\n",
+      "[kaggle_environments.envs.open_spiel_env.open_spiel_env] INFO:    open_spiel_connect_four\n",
+      "[kaggle_environments.envs.open_spiel_env.open_spiel_env] INFO:    open_spiel_gin_rummy\n",
+      "[kaggle_environments.envs.open_spiel_env.open_spiel_env] INFO:    open_spiel_go\n",
+      "[kaggle_environments.envs.open_spiel_env.open_spiel_env] INFO:    open_spiel_tic_tac_toe\n",
+      "[kaggle_environments.envs.open_spiel_env.open_spiel_env] INFO:    open_spiel_universal_poker\n",
+      "[kaggle_environments.envs.open_spiel_env.open_spiel_env] INFO:    open_spiel_repeated_poker\n",
+      "[kaggle_environments.envs.open_spiel_env.open_spiel_env] INFO:    open_spiel_python_repeated_pokerkit\n",
+      "[kaggle_environments.envs.open_spiel_env.open_spiel_env] INFO: OpenSpiel games skipped: 0.\n",
       "+---+---+---+---+---+---+---+\n",
       "| 0 | 0 | 0 | 0 | 0 | 0 | 0 |\n",
       "+---+---+---+---+---+---+---+\n",
@@ -46,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "37873b8a",
    "metadata": {},
    "outputs": [],
@@ -81,10 +91,10 @@
     "    \n",
     "    print(f\"P1 vs Random: {mean_reward(rewards_random_p1, 'P1')}\")\n",
     "    print(rewards_random_p1)\n",
-    "    print(f\"P1 vs Negamax: {mean_reward(rewards_negamax_p1, 'P1')}\\n\")  \n",
+    "    print(f\"P1 vs Negamax: {mean_reward(rewards_negamax_p1, 'P1')}\")  \n",
     "    print(rewards_negamax_p1)\n",
     "\n",
-    "    print(f\"P2 vs Random: {mean_reward(rewards_random_p2, 'P2')}\")\n",
+    "    print(f\"\\nP2 vs Random: {mean_reward(rewards_random_p2, 'P2')}\")\n",
     "    print(rewards_random_p2)\n",
     "    print(f\"P2 vs Negamax: {mean_reward(rewards_negamax_p2, 'P2')}\")\n",
     "    print(rewards_negamax_p2)"
@@ -92,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "469387f5",
    "metadata": {},
    "outputs": [],
@@ -116,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "360fd1c7",
    "metadata": {},
    "outputs": [],
@@ -336,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "bad15b6c",
    "metadata": {},
    "outputs": [
@@ -344,10 +354,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Turn 1: Action 3 (in 1.80 seconds)\n",
-      "Turn 3: Action 2 (in 1.81 seconds)\n",
-      "Turn 5: Action 4 (in 1.81 seconds)\n",
-      "Turn 7: Action 1 (in 0.00 seconds)\n",
+      "MCTS: 984 simulations, best action: 5\n",
+      "Turn 1: Action 6 (in 1.80 seconds)\n",
+      "MCTS: 790 simulations, best action: 4\n",
+      "Turn 3: Action 5 (in 1.80 seconds)\n",
+      "MCTS: 7512 simulations, best action: 3\n",
+      "Turn 5: Action 4 (in 1.80 seconds)\n",
+      "Winning move at column 2\n",
+      "Turn 7: Action 3 (in 0.00 seconds)\n",
       "\n",
       "You won :)\n",
       "\n",
@@ -360,15 +374,22 @@
       "+---+---+---+---+---+---+---+\n",
       "| 0 | 0 | 0 | 0 | 0 | 0 | 0 |\n",
       "+---+---+---+---+---+---+---+\n",
-      "| 0 | 2 | 2 | 0 | 0 | 0 | 0 |\n",
+      "| 2 | 0 | 0 | 0 | 2 | 0 | 0 |\n",
       "+---+---+---+---+---+---+---+\n",
-      "| 1 | 1 | 1 | 1 | 0 | 0 | 2 |\n",
+      "| 2 | 0 | 1 | 1 | 1 | 1 | 0 |\n",
       "+---+---+---+---+---+---+---+\n",
       "\n",
       "Evaluating agent against random and negamax with 10 games as P1 and P2...\n",
       "\n",
       "P1 vs Random: 1.0\n",
-      "[[1, -1], [1, -1], [1, -1], [1, -1], [1, -1], [1, -1], [1, -1], [1, -1], [1, -1], [1, -1]]\n"
+      "[[1, -1], [1, -1], [1, -1], [1, -1], [1, -1], [1, -1], [1, -1], [1, -1], [1, -1], [1, -1]]\n",
+      "P1 vs Negamax: 0.7\n",
+      "\n",
+      "[[0, 0], [0, 0], [1, -1], [1, -1], [1, -1], [1, -1], [0, 0], [1, -1], [1, -1], [1, -1]]\n",
+      "P2 vs Random: 1.0\n",
+      "[[-1, 1], [-1, 1], [-1, 1], [-1, 1], [-1, 1], [-1, 1], [-1, 1], [-1, 1], [-1, 1], [-1, 1]]\n",
+      "P2 vs Negamax: 0.4\n",
+      "[[-1, 1], [1, -1], [-1, 1], [-1, 1], [-1, 1], [-1, 1], [1, -1], [-1, 1], [-1, 1], [1, -1]]\n"
      ]
     }
    ],
